--- a/OctoPodium/Custom Cells/RankingCell.xib
+++ b/OctoPodium/Custom Cells/RankingCell.xib
@@ -7,11 +7,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="162" id="eIU-JD-Jw6" customClass="RankingCell" customModule="GitHubAwards" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="162" id="eIU-JD-Jw6" customClass="RankingCell" customModule="OctoPodium" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="424" height="162"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eIU-JD-Jw6" id="opb-3C-XbF">
-                <rect key="frame" x="0.0" y="0.0" width="424" height="162"/>
+                <rect key="frame" x="0.0" y="0.0" width="424" height="161.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCt-tt-5lr" userLabel="Header">
@@ -45,27 +45,27 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star" translatesAutoresizingMaskIntoConstraints="NO" id="4Wr-Dw-afo">
-                                <rect key="frame" x="288" y="9" width="20" height="20"/>
+                                <rect key="frame" x="303" y="9" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="Ak5-ud-Agi"/>
                                     <constraint firstAttribute="width" constant="20" id="Vo1-IF-7hg"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ok0-jK-htZ">
-                                <rect key="frame" x="313" y="9" width="21" height="21"/>
+                                <rect key="frame" x="328" y="9.5" width="20.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Repository" translatesAutoresizingMaskIntoConstraints="NO" id="gti-s5-4h8">
-                                <rect key="frame" x="354" y="6" width="20" height="26"/>
+                                <rect key="frame" x="353.5" y="6" width="20" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="JFJ-Qt-jXR"/>
                                     <constraint firstAttribute="height" constant="26" id="xcB-yt-dZI"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JvZ-ZR-2ng">
-                                <rect key="frame" x="379" y="9" width="21" height="21"/>
+                                <rect key="frame" x="378.5" y="9.5" width="20.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -84,7 +84,7 @@
                             <constraint firstItem="JvZ-ZR-2ng" firstAttribute="centerY" secondItem="rCt-tt-5lr" secondAttribute="centerY" id="TVJ-3J-em2"/>
                             <constraint firstItem="ok0-jK-htZ" firstAttribute="centerY" secondItem="rCt-tt-5lr" secondAttribute="centerY" id="Zlq-Qa-Up1"/>
                             <constraint firstItem="eqD-LG-pyC" firstAttribute="leading" secondItem="rCt-tt-5lr" secondAttribute="leading" constant="70" id="ay7-N5-gVy"/>
-                            <constraint firstItem="gti-s5-4h8" firstAttribute="leading" secondItem="ok0-jK-htZ" secondAttribute="trailing" constant="20" id="cdU-Rm-Mis"/>
+                            <constraint firstItem="gti-s5-4h8" firstAttribute="leading" secondItem="ok0-jK-htZ" secondAttribute="trailing" constant="5" id="cdU-Rm-Mis"/>
                             <constraint firstItem="eqD-LG-pyC" firstAttribute="centerY" secondItem="rCt-tt-5lr" secondAttribute="centerY" id="dXH-iD-1aA"/>
                             <constraint firstItem="WHe-vz-WCh" firstAttribute="top" secondItem="rCt-tt-5lr" secondAttribute="top" id="dw0-yA-JdM"/>
                             <constraint firstItem="if4-wm-fBo" firstAttribute="leading" secondItem="WHe-vz-WCh" secondAttribute="trailing" constant="-17" id="fBj-B7-leS"/>
@@ -109,19 +109,19 @@
                         <rect key="frame" x="10" y="48" width="404" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="paE-Ba-BNL" userLabel="City Name">
-                                <rect key="frame" x="8" y="7" width="335" height="16"/>
+                                <rect key="frame" x="8" y="7" width="334.5" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.52156862745098043" green="0.52156862745098043" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sig-O4-8dI" userLabel="City Ranking">
-                                <rect key="frame" x="353" y="6" width="8" height="20"/>
+                                <rect key="frame" x="352.5" y="5.5" width="8" height="19.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <color key="textColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/123" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="by4-8K-JYS" userLabel="City Total">
-                                <rect key="frame" x="361" y="5" width="34" height="21"/>
+                                <rect key="frame" x="360.5" y="5.5" width="33.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.19215686274509802" green="0.19215686274509802" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -143,19 +143,19 @@
                         <rect key="frame" x="10" y="85" width="404" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcF-AD-1cO" userLabel="Country Name">
-                                <rect key="frame" x="8" y="7" width="330" height="16"/>
+                                <rect key="frame" x="8" y="7" width="329.5" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.52156862749999999" green="0.52156862749999999" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4B9-SG-BmW" userLabel="Country Ranking">
-                                <rect key="frame" x="348" y="5" width="21" height="22"/>
+                                <rect key="frame" x="347.5" y="4.5" width="20.5" height="21.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <color key="textColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/45" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="71I-a7-127" userLabel="Country Total">
-                                <rect key="frame" x="368" y="5" width="26" height="21"/>
+                                <rect key="frame" x="368" y="5.5" width="26" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -183,13 +183,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="34" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEh-hC-0JA" userLabel="World Ranking">
-                                <rect key="frame" x="324" y="5" width="24" height="22"/>
+                                <rect key="frame" x="324" y="4.5" width="24" height="21.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <color key="textColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/6897" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4b-tk-7Jf" userLabel="World Total">
-                                <rect key="frame" x="348" y="5" width="46" height="21"/>
+                                <rect key="frame" x="348" y="5.5" width="46" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
